fix collapse menu width

--- a/src/styles/components/navbarDrawer.scss
+++ b/src/styles/components/navbarDrawer.scss
@@ -1,5 +1,8 @@
-.nav-panel {
+.nav-panel-1 {
   background-color: $primary-color-light-41;
+}
+.nav-panel-2 {
+  background-color: $primary-color-light-39;
 }
 
 .nav-drawer {
